--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "ngx-popperjs": "^14.1.8",
     "rxjs": "~7.5.0",
+    "stream-chat": "^8.10.1",
+    "stream-chat-angular": "^4.32.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
