--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 3000 --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -15,13 +15,17 @@
     "@angular/compiler": "14.0.5",
     "@angular/core": "14.0.5",
     "@angular/forms": "14.0.5",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "14.0.5",
     "@angular/platform-browser-dynamic": "14.0.5",
     "@angular/router": "14.0.5",
     "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@types/ws": "^8.5.4",
+    "moment": "^2.29.4",
+    "ngx-popper": "^7.0.0",
     "ngx-popperjs": "^14.1.8",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.0",
     "stream-chat": "8.10.1",
     "stream-chat-angular": "4.16.0",
     "tslib": "^2.3.0",
